# "package_data": {
#     # If any package contains *.txt files, include them:
#     # "": ["*.css", "*.html", "*.ico", "*.js"],
#     "": ["*.tmpl"],
#     "stressor.monitor": ["htdocs/*.*"],
# },
# "install_requires": install_requires,
# "setup_requires": setup_requires,
# "tests_require": tests_require,
# "py_modules": [],
# "zip_safe": False,
# "extras_require": {},
# "cmdclass": {"test": ToxCommand, "sphinx": SphinxCommand},
# "entry_points": {"console_scripts": ["stressor = stressor.stressor_cli:run"]},
# "options": {},

[metadata]
name = stressor
version = attr: stressor.__version__
author = Martin Wendt
author_email = stressor@wwwendt.de
maintainer = Martin Wendt
maintainer_email = stressor@wwwendt.de
url = https://github.com/mar10/stressor/
project_urls =
    Bug Tracker = https://github.com/mar10/stressor/issues
    Source Code = https://github.com/mar10/stressor
    Documentation = https://stressor.readthedocs.io/
    Download = https://github.com/mar10/stressor/releases/latest
description = Stress-test your web app
long_description = file: README.md
long_description_content_type = text/markdown
keywords = web, server, load, test, stress
license = MIT
license_file = LICENSE.txt
classifiers =
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    lxml
    python-dateutil
    PyYAML
    requests
    snazzy

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    stressor = stressor.stressor_cli:run

[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

# [check-manifest]
# ignore =
#     docs/sphinx-build
#     docs/sphinx-build/*

# --- Coverage Settings --------------------------------------------------------

[coverage:run]
# branch = True
omit =
    tests/*
    stressor/stressor_cli.py
    stressor/cli_common.py
    stressor/monitor/*

[coverage:report]
precision = 1
# show_missing = True
sort = Name
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[coverage:html]
directory = build/coverage

# --- Alternative to pytest.ini ---------------------------------------------

[tool:pytest]
# Silence `PytestDeprecationWarning`
junit_family = legacy
; testpaths =
;     tests
;     src


# --- Flake8 Settings ----------------------------------------------------------

[flake8]
# G: enable 'flake8-logging-format'
enable-extensions = G

exclude =
    __pycache__,
    .cache,
    .eggs,
    .git,
    .tox,
    .vscode,
    build,
    dist,
    docs

max-line-length = 99
# max-line-length = 88

# 'mccabe' plugin:
# max-complexity = 12

# max-annotations-complexity = 10
# max-expression-complexity = 10

# Ignore some errors that may be created by Black:
#   - E203 whitespace before ':'
#   - E501 line too long
#   - W503 line break before binary operator
#   - P101 format string does contain unindexed parameters
ignore = E203, E501, W503, P101

# Instead of strict E501, enable B950 for relaxed line length checking (and other bugbear warnings)
# select = B,C,D,E,F,I,N,P,PT,Q,S,T,W,B9

#
docstring-convention = all  # google?

# Options for the flake8-quotes extension:
inline-quotes = double
multiline-quotes = """
docstring-quotes = """
avoid-escape = True
